--- a/appendix.tex
+++ b/appendix.tex
@@ -9,9 +9,11 @@
 \section{Electronic schematics}
 \label{app:schematics}
 \subsection*{Control box schematics}
-%\includegraphics[width=\linewidth]{figures/pulserhead_schematic.png}
+\includegraphics[width=0.9\linewidth]{figures/controlbox_schematic.png}
+\newpage
 \subsection*{Pulserhead schematics}
-\includegraphics[width=\linewidth]{figures/pulserhead_schematic.png}
+\includegraphics[width=0.8\linewidth]{figures/pulserhead_schematic.png}
+\newpage
 %
 % Control codes
 %
@@ -44,12 +46,392 @@ Pulse amplitude is selected with ‘L’ and  ‘M’ and loaded with ‘P’.
 A sequence is initiated with ‘g’ or  continuous output with ‘a’.               
 
 Output can be stopped at any time with ‘x’.
+\newpage
 %
 % Pulser head encapsulation design
 %
 \section{Pulserhead encapsulation design}
 \label{app:pulserhead_design}
 \subsection*{Pulserhead base}
-\includegraphics[width=\linewidth]{figures/pulserhead_base.png}
+\includegraphics[width=0.8\linewidth]{figures/pulserhead_base.png}
 \subsection*{Pulserhead tube}
-\includegraphics[width=\linewidth]{figures/pulserhead_tube.png}
+\includegraphics[width=0.8\linewidth]{figures/pulserhead_tube.png}
+\newpage
+%
+% LED spectra
+%%
+\section{LED spectra}
+\label{app:led_spectra}
+\subsection*{Blue LED}
+\begin{table}[!h]
+\centering
+\caption{Spectrum for the 420~nm LEDs}
+\label{tab:led_uv}
+\begin{tabular}{rr}
+\toprule
+ $\lambda$ (nm) &    counts \\
+\midrule
+          390.11 &    169.68 \\
+          390.57 &    192.48 \\
+          391.03 &    218.96 \\
+          391.49 &    247.40 \\
+          391.95 &    281.00 \\
+          392.41 &    321.08 \\
+          392.87 &    363.52 \\
+          393.32 &    414.56 \\
+          393.78 &    472.84 \\
+          394.24 &    536.92 \\
+          394.70 &    606.40 \\
+          395.16 &    684.12 \\
+          395.62 &    775.24 \\
+          396.08 &    873.04 \\
+          396.54 &    984.80 \\
+          396.99 &   1113.80 \\
+          397.45 &   1258.12 \\
+          397.91 &   1409.12 \\
+          398.37 &   1582.48 \\
+          398.83 &   1775.36 \\
+          399.29 &   1982.88 \\
+          399.75 &   2214.52 \\
+          400.20 &   2479.32 \\
+          400.66 &   2775.24 \\
+          401.12 &   3099.52 \\
+          401.58 &   3473.88 \\
+          402.04 &   3887.60 \\
+          402.50 &   4344.40 \\
+          402.95 &   4854.16 \\
+          403.41 &   5420.00 \\
+          403.87 &   6040.96 \\
+          404.33 &   6729.72 \\
+          404.79 &   7498.96 \\
+          405.24 &   8345.04 \\
+          405.70 &   9269.32 \\
+          406.16 &  10314.44 \\
+          406.62 &  11467.32 \\
+          407.08 &  12727.96 \\
+          407.53 &  14116.40 \\
+          407.99 &  15610.92 \\
+\bottomrule
+\end{tabular}        
+\begin{tabular}{rr}
+\toprule
+ $\lambda$ (nm) &    counts \\
+\midrule
+          408.45 &  17203.24 \\  
+          408.91 &  18916.24 \\
+          409.37 &  20723.72 \\
+          409.82 &  22630.68 \\
+          410.28 &  24659.96 \\
+          410.74 &  26758.92 \\
+          411.20 &  28914.56 \\
+          411.65 &  31087.52 \\
+          412.11 &  33262.12 \\
+          412.57 &  35417.36 \\
+          413.03 &  37500.80 \\
+          413.49 &  39511.04 \\
+          413.94 &  41448.80 \\
+          414.40 &  43232.64 \\
+          414.86 &  44818.76 \\
+          415.32 &  46225.28 \\
+          415.77 &  47373.92 \\
+          416.23 &  48278.08 \\
+          416.69 &  48946.60 \\
+          417.15 &  49375.80 \\
+          417.60 &  49551.16 \\
+          418.06 &  49489.64 \\
+          418.52 &  49175.72 \\
+          418.97 &  48612.32 \\
+          419.43 &  47825.40 \\
+          419.89 &  46839.28 \\
+          420.35 &  45671.64 \\
+          420.80 &  44366.76 \\
+          421.26 &  42947.08 \\
+          421.72 &  41433.60 \\
+          422.18 &  39853.04 \\
+          422.63 &  38214.60 \\ 
+          423.09 &  36545.12 \\
+          423.55 &  34888.60 \\
+          424.00 &  33241.76 \\
+          424.46 &  31636.24 \\
+          424.92 &  30097.96 \\
+          425.37 &  28579.20 \\
+          425.83 &  27130.92 \\
+          426.29 &  25741.80 \\
+\bottomrule
+\end{tabular}        
+\begin{tabular}{rr}
+\toprule
+ $\lambda$ (nm) &    counts \\
+\midrule
+          426.75 &  24410.80 \\
+          427.20 &  23145.52 \\
+          427.66 &  21978.16 \\
+          428.12 &  20831.16 \\
+          428.57 &  19756.40 \\
+          429.03 &  18739.64 \\
+          429.49 &  17763.76 \\
+          429.94 &  16828.40 \\
+          430.40 &  15950.64 \\
+          430.86 &  15115.20 \\
+          431.31 &  14321.16 \\
+          431.77 &  13567.00 \\
+          432.23 &  12840.28 \\
+          432.68 &  12160.68 \\
+          433.14 &  11510.76 \\
+          433.59 &  10862.48 \\
+          434.05 &  10262.16 \\
+          434.51 &   9699.12 \\
+          434.96 &   9148.72 \\
+          435.42 &   8624.04 \\
+          435.88 &   8138.32 \\
+          436.33 &   7664.64 \\
+          436.79 &   7217.20 \\ 
+          437.25 &   6795.44 \\
+          437.70 &   6397.80 \\
+          438.16 &   6027.64 \\
+          438.61 &   5691.88 \\
+          439.07 &   5370.20 \\
+          439.53 &   5071.40 \\
+          439.98 &   4787.52 \\
+          440.44 &   4523.44 \\
+          440.89 &   4270.84 \\
+          441.35 &   4035.40 \\
+          441.81 &   3812.36 \\
+          442.26 &   3613.80 \\
+          442.72 &   3425.92 \\
+          443.17 &   3239.44 \\
+          443.63 &   3070.84 \\
+          444.09 &   2914.56 \\
+          444.54 &   2761.48 \\
+\bottomrule
+\end{tabular}        
+\begin{tabular}{rr}
+\toprule
+ $\lambda$ (nm) &    counts \\
+\midrule
+          445.00 &   2616.92 \\
+          445.45 &   2489.24 \\
+          445.91 &   2358.24 \\
+          446.36 &   2235.00 \\
+          446.82 &   2117.92 \\
+          447.28 &   2001.92 \\
+          447.73 &   1887.08 \\
+          448.19 &   1789.76 \\
+          448.64 &   1687.04 \\
+          449.10 &   1596.04 \\
+          449.55 &   1507.60 \\
+          450.01 &   1429.08 \\ 
+          450.47 &   1349.56 \\
+          450.92 &   1280.08 \\
+          451.38 &   1210.48 \\
+          451.83 &   1152.92 \\
+          452.29 &   1090.96 \\
+          452.74 &   1029.68 \\
+          453.20 &    974.80 \\
+          453.65 &    921.12 \\
+          454.11 &    871.16 \\
+          454.56 &    823.20 \\
+          455.02 &    782.44 \\
+          455.47 &    741.48 \\
+          455.93 &    701.72 \\
+          456.38 &    661.16 \\
+          456.84 &    629.84 \\
+          457.29 &    597.68 \\
+          457.75 &    567.96 \\
+          458.20 &    539.48 \\
+          458.66 &    516.52 \\
+          459.11 &    490.52 \\
+          459.57 &    465.44 \\
+\bottomrule
+\end{tabular}
+\end{table}
+\newpage
+
+\subsection*{UV LED}
+\begin{table}[!h]
+\centering
+\caption{Spectrum for the 355~nm LEDs}
+\label{tab:led_uv}
+\begin{tabular}{rr}
+\toprule
+ $\lambda$ (nm) &    counts \\
+\midrule
+          330.22 &     40.68 \\
+          330.68 &     44.72 \\
+          331.15 &     46.52 \\
+          331.61 &     51.68 \\
+          332.07 &     56.16 \\
+          332.53 &     61.96 \\
+          332.99 &     66.96 \\
+          333.46 &     77.28 \\
+          333.92 &     86.28 \\
+          334.38 &     97.60 \\
+          334.84 &    111.96 \\
+          335.31 &    129.32 \\
+          335.77 &    148.48 \\
+          336.23 &    171.96 \\
+          336.69 &    203.96 \\
+          337.15 &    241.96 \\
+          337.62 &    287.28 \\
+          338.08 &    338.56 \\
+          338.54 &    404.88 \\
+          339.00 &    477.80 \\
+          339.46 &    562.36 \\
+          339.93 &    662.16 \\
+          340.39 &    778.28 \\
+          340.85 &    908.20 \\
+          341.31 &   1056.56 \\
+          341.77 &   1232.72 \\
+          342.24 &   1430.48 \\
+          342.70 &   1659.60 \\
+          343.16 &   1925.00 \\
+          343.62 &   2235.40 \\
+          344.08 &   2596.20 \\  
+\bottomrule
+\end{tabular}
+\begin{tabular}{rr}
+\toprule
+ $\lambda$ (nm) &    counts \\
+\midrule   
+          344.54 &   3022.24 \\
+          345.01 &   3523.24 \\
+          345.47 &   4096.88 \\
+          345.93 &   4771.16 \\
+          346.39 &   5553.16 \\
+          346.85 &   6460.12 \\
+          347.31 &   7507.88 \\
+          347.77 &   8706.92 \\
+          348.24 &  10067.80 \\
+          348.70 &  11598.76 \\
+          349.16 &  13320.68 \\
+          349.62 &  15218.56 \\
+          350.08 &  17311.44 \\
+          350.54 &  19615.96 \\
+          351.00 &  22112.48 \\
+          351.47 &  24778.36 \\
+          351.93 &  27600.52 \\
+          352.39 &  30551.12 \\
+          352.85 &  33521.68 \\
+          353.31 &  36536.76 \\
+          353.77 &  39491.16 \\
+          354.23 &  42346.24 \\
+          354.69 &  45030.04 \\
+          355.15 &  47508.08 \\
+          355.61 &  49667.84 \\
+          356.08 &  51527.68 \\
+          356.54 &  52989.20 \\
+          357.00 &  54099.80 \\
+          357.46 &  54828.68 \\
+          357.92 &  55194.92 \\
+          358.38 &  55169.92 \\ 
+\bottomrule
+\end{tabular}
+\begin{tabular}{rr}
+\toprule
+ $\lambda$ (nm) &    counts \\
+\midrule   
+          358.84 &  54855.72 \\
+          359.30 &  54196.32 \\
+          359.76 &  53270.04 \\
+          360.22 &  52117.44 \\
+          360.68 &  50849.00 \\
+          361.14 &  49465.80 \\
+          361.61 &  48099.56 \\
+          362.07 &  46779.64 \\
+          362.53 &  45589.32 \\
+          362.99 &  44535.32 \\
+          363.45 &  43665.72 \\
+          363.91 &  42962.24 \\
+          364.37 &  42470.84 \\
+          364.83 &  42082.00 \\
+          365.29 &  41798.84 \\
+          365.75 &  41597.08 \\
+          366.21 &  41416.32 \\
+          366.67 &  41208.20 \\
+          367.13 &  40986.12 \\
+          367.59 &  40670.12 \\
+          368.05 &  40253.40 \\
+          368.51 &  39696.96 \\
+          368.97 &  39057.12 \\
+          369.43 &  38216.44 \\
+          369.89 &  37265.96 \\
+          370.35 &  36176.36 \\
+          370.81 &  34995.32 \\
+          371.27 &  33638.28 \\
+          371.73 &  32271.88 \\
+          372.19 &  30835.76 \\
+          372.65 &  29375.44 \\ 
+\bottomrule
+\end{tabular}
+\begin{tabular}{rr}
+\toprule
+ $\lambda$ (nm) &    counts \\
+\midrule   
+          373.11 &  27908.76 \\
+          373.57 &  26478.80 \\
+          374.03 &  25064.00 \\
+          374.49 &  23700.68 \\
+          374.95 &  22387.92 \\
+          375.41 &  21113.28 \\
+          375.87 &  19889.04 \\
+          376.33 &  18747.28 \\
+          376.79 &  17634.20 \\
+          377.25 &  16593.56 \\
+          377.71 &  15612.28 \\
+          378.17 &  14689.04 \\
+          378.63 &  13798.12 \\
+          379.09 &  12983.24 \\
+          379.55 &  12190.52 \\
+          380.01 &  11460.00 \\
+          380.47 &  10766.72 \\
+          380.93 &  10109.24 \\
+          381.39 &   9487.80 \\
+          381.85 &   8920.28 \\
+          382.31 &   8375.68 \\
+          382.77 &   7861.44 \\
+          383.23 &   7384.84 \\
+          383.68 &   6938.08 \\
+          384.14 &   6508.72 \\
+          384.60 &   6107.04 \\
+          385.06 &   5739.96 \\
+          385.52 &   5395.60 \\
+          385.98 &   5067.88 \\
+          386.44 &   4778.32 \\
+          386.90 &   4509.56 \\ 
+\bottomrule
+\end{tabular}
+\begin{tabular}{rr}
+\toprule
+ $\lambda$ (nm) &    counts \\
+\midrule   
+          387.36 &   4253.12 \\
+          387.82 &   4015.12 \\
+          388.28 &   3797.56 \\
+          388.74 &   3576.20 \\
+          389.19 &   3376.76 \\
+          389.65 &   3191.92 \\
+          390.11 &   3012.08 \\
+          390.57 &   2848.40 \\
+          391.03 &   2698.68 \\
+          391.49 &   2553.56 \\
+          391.95 &   2417.40 \\
+          392.41 &   2297.60 \\
+          392.87 &   2179.28 \\
+          393.32 &   2070.16 \\
+          393.78 &   1965.84 \\
+          394.24 &   1870.68 \\
+          394.70 &   1776.72 \\
+          395.16 &   1692.00 \\
+          395.62 &   1612.20 \\
+          396.08 &   1538.68 \\
+          396.54 &   1466.48 \\
+          396.99 &   1404.12 \\
+          397.45 &   1342.12 \\
+          397.91 &   1281.60 \\
+          398.37 &   1226.64 \\
+          398.83 &   1176.64 \\
+          399.29 &   1127.32 \\
+          399.75 &   1082.88 \\
+\bottomrule
+\end{tabular}
+\end{table}
