--- a/commissioning.tex
+++ b/commissioning.tex
@@ -12,9 +12,10 @@ The nanopulser optical calibration system (serial nr OP\_12\_420\_2\_355) has be
 
 The system was then shipped to Japan and tested again for functionality at the \jsns lab in the KEK building at J-PARC. The system was found to be working as expected, expect for pulserhead 7. This was replaced with a spare one (programmed to reflect the position), which worked correctly.
 
+\fix[inline]{RW,SJMP: verify units in table - entered the most likely, but RW will check scripts in January.}
 \begin{table}[h!]
   \begin{center}
-    \caption{Results of the commissioning at the University of Sussex. The measurements are only relative: settings indicated are for which the trigger pulser and the light pulse were observed at the same time, using the specific test set-up at Sussex. The amplitude was as measured with a Hamatsu mini-PMT with mylar filter using the maximum light output setting. Note that the PMT's quantum efficiency for the UV LEDs, pulserheads 2 and 13, is much lower.}
+    \caption{Results of the commissioning at the University of Sussex. The measurements are only relative: settings indicated are for which the trigger pulser and the light pulse were observed at the same time, using the specific test set-up at Sussex. The amplitude was as measured with a Hamatsu mini-PMT (H10721-210) with mylar filter using the maximum light output setting. Note that the PMT's quantum efficiency for the UV LEDs, pulserheads 2 and 13, is much lower.}
     \label{table:sussex_commissioning}
     \begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|} 
 	\hline
@@ -27,7 +28,7 @@ The system was then shipped to Japan and tested again for functionality at the \
 			 & head    & trigger & trigger & (V) 
                     & head    & trigger & trigger & (V) \\
 	Branch    & & delay & delay & & & delay & delay & & & delay & delay & \\
-	             & & (ns) & (ns) & & & (ns) & (ns) & & & (ns) & (ns) & \\
+	             & & (ns) & (setting) & & & (ns) & (setting) & & & (ns) & (setting) & \\
        \hline 
 	1 & 1 & 810 & 21 & 2.7 & 2 & 830 & 18 & 1.1 & 3 & 815 & 7 & 1.8 \\
 	2 & 4 & 795 & 7  & 3.5 & 5 & 810 & 19 & 5.0 & & & & \\
