Added information about control box lights

--- a/design.tex
+++ b/design.tex
@@ -173,9 +173,13 @@ The perfomance of the pulserheads is documented on github\cite{GITHUB_TEST}, and
   \label{figure:controlbox}
 \end{center}
 \end{figure}
-\missing[inline]{RW,SJMP: check control lights and add information on meaning.}
 
 One symptom of a blown fuse can be that  the pulser does communicate but either does not produce light, or produces a wide pulse (of the order of 100~ns).
+
+The control box has two indicator lights: a red light and a green light.
+The red light is connected to the 5~V supply to indicate the unit is powered up. 
+The green light is labeled ‘active’, and indicates that any one of the slave units is emitting light.
+
 
 \subsection*{Cable design}
 
